# myaxumserv

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
src/accessors/: user.rs
src/clients/: local_db.rs
src/managers/: user.rs
src/middlewares/: logger.rs
src/models/: local_db.rs  mod.rs  user.rs
src/modules/: api.rs
src/resources/: user.rs
src/routes/: api.rs  mod.rs  users.rs
src/state/: api.rs
src/utils/: uuid.rs
