[package]
name = "myaxumserv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.164", features = [ "derive" ] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = [ "macros", "rt-multi-thread" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tower-service = "0.3.2"
uuid = { versoin = "1.3.4", features = [ "v4" ] }
