[package]
name = "myaxumserv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.164", features = [ "derive" ] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = [ "macros", "rt-multi-thread" ] }
uuid = { version = "1.3.4", features = [ "v4" ] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
shaku = "0.6.1"
shaku_axum = "0.4.0"
